--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,17 @@
-<app-calculadora></app-calculadora>
+<div class="container my-3">
+    <h1>Calculadora </h1>
+    <div class="row">
+        <div class="col">
+            <app-calculadora 
+            (resultadoEmit)="enviarResultado($event)"
+            ></app-calculadora>
+
+          
+            <app-resultado 
+            [resultado]="resultado"
+            ></app-resultado>
+    
+
+        </div>
+    </div>
+</div>
